<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Help">

    <TextView
        android:id="@+id/about_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/about_head"
        android:textColor="@color/customGreen"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_head"
        android:layout_marginStart="5dp"
        android:text="@string/about_app"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/feedback_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_body"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/feedback_email"
        android:textColor="@color/customGreen"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/Share_Me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_me"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_share"
            android:src="@drawable/ic_baseline_share_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:gravity="bottom"
        android:text="@string/credit"
        android:textStyle="bold" />

</RelativeLayout>