<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nosave_bg"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/enter_Number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:autofillHints="@string/enter_Number"
            android:digits="0123456789"
            android:hint="@string/enter_Number"
            android:inputType="phone"
            android:maxLength="10"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/customGreen"
            android:textColorHint="@color/customGreen"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/enter_Message"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:autoLink="web"
            android:autofillHints="@string/enter_Message"
            android:background="@drawable/textviewbg"
            android:hint="@string/enter_Message"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textAllCaps="false"
            android:textColorHint="@color/customGreen"
            android:textSize="18sp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/take_me_to"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendToWhatsApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:background="@drawable/buttonround"
                android:padding="10dp"
                android:text="@string/enter_Button_1"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/sendToWhatsApp4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/buttonround"
                android:padding="10dp"
                android:text="@string/enter_Button_2"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>